dataset1235/2025-2/2947369575/users/3556712823/executions/1003782500_1462915504.log
== RUN (2025-08-27 23:22:00)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
apotema = lado/(2*(math.tan(math.pi/5)))
A = (5/2)*lado*apotema

print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentágono?139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentágono?61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentágono?208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentágono?110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentágono?27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentágono?172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:17:20)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/2*math.tan(math.pi/5)
A = 5/2 *lado *Apotema

print(round( A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentágono?73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentágono?32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentágono?109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentágono?58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentágono?14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentágono?90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:16:25)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/2*(tan(math.pi/5))
A = 5/2 *lado *Apotema

print(round( A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:16:43)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/(2*(tan(math.pi/5)))
A = 5/2 *lado *Apotema

print(round( A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/(2*(tan(math.pi/5)))
                       ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/(2*(tan(math.pi/5)))
                       ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/(2*(tan(math.pi/5)))
                       ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/(2*(tan(math.pi/5)))
                       ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/(2*(tan(math.pi/5)))
                       ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/(2*(tan(math.pi/5)))
                       ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:16:06)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/2*(tan(math.pi/5))
A = 5/2 *lado*Apotema

print(round( A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:16:59)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/2*tan(math.pi/5)
A = 5/2 *lado *Apotema

print(round( A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:17:44)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/2*(math.tan(math.pi/5))
A = 5/2 *lado*Apotema

print(round( A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentágono?73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentágono?32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentágono?109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentágono?58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentágono?14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentágono?90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:21:44)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
apotema = lado/2*(math.tan(math.pi/5))
A = (5/2)*lado*apotema

print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentágono?73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentágono?32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentágono?109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentágono?58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentágono?14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentágono?90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:19:13)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/2*(math.tan(math.pi/5))
A = 5/2*lado*Apotema

print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentágono?73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentágono?32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentágono?109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentágono?58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentágono?14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentágono?90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:16:29)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
Apotema = lado/2*(tan(math.pi/5))
A = 5/2 *lado *Apotema

print(round( A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Apotema = lado/2*(tan(math.pi/5))
                      ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:21:19)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
apotema = lado/2*(math.tan(math.pi/5))
A = 5/2*lado*apotema

print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentágono?73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentágono?32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentágono?109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentágono?58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentágono?14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentágono?90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:22:16)
-- CODE: 
import math
lado = float (input("Qual o comprimento do lado do pentágono?"))
apotema = lado/(2*(math.tan(math.pi/5)))
A = (5/2)*lado*apotema

print(round(A,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentágono?139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentágono?61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentágono?208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentágono?110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentágono?27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentágono?172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
